generate html document

--- a/homework.Rmd
+++ b/homework.Rmd
@@ -2,7 +2,7 @@
 title: "homework"
 author: "Jakub Guzek"
 date: "2023-03-26"
-output: md_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
